Compiler/fasto/tests/filter_neg2.fo
fun bool greaterthan10 (int a) = if (a < 10) then true else false

fun int main () = 
    let f = filter(greaterthan10, {true, false, true, false}) in 0